--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             <div slot="header" class="clearfix">
                 <el-row :gutter="20">
                     <el-col :span="6" :offset="6">
-                        <el-button type="success" @click="handleInit">重置</el-button>
+                        <el-button type="success" @click="handleStart">開始</el-button>
+                        <el-button type="info" @click="handleInit">重置</el-button>
                         <el-button type="primary" @click="handleShuffle">打亂</el-button>
                     </el-col>
                 </el-row>
@@ -25,7 +26,6 @@
                 <draggable v-model="containers[index]" 
                             animation="300"
                             draggable=".handle"
-                            :sort="checkSort"
                             handle=".handle"
                             :group="{ name: 'hue-boxes', pull: false, put: false }" 
                             :tag="'div'">
@@ -77,10 +77,8 @@
                             console.log('done');
                         });
                 },
-                checkSort(evt){
-                    
-                    console.log(evt)
-                    return true;
+                handleStart(){
+             
                 },
                 handleShuffle(){
                     let _self = this;
@@ -107,17 +105,6 @@
                    ];
 
                    return resultArray;
-                },
-                shuffleArray(array) {
-                    for (let i = array.length - 1; i > 0; i--) {
-                        const j = Math.floor(Math.random() * (i + 1));
-                        [array[i], array[j]] = [array[j], array[i]];
-                    }
-                },
-                shuffleArrays(...arrays) {
-                    for (let i = 0; i < arrays.length; i++) {
-                        arrays[i] = this.shuffleArray(arrays[i]);
-                    }
                 }
             },
             mounted() {
